# mate-screensaver-euclidus

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.ac  mate-screensaver-euclidus.spec.in
images/: Makefile.am  als-logo-inverse.eps  als-logo.eps
po/: en_US.po
src/: Makefile.am  euclidus.c  euclidus.h  gs-theme-window.c  gs-theme-window.h  gtk_opengl.c  gtk_opengl.h  mate-screensaver-euclidus.desktop
