# This file is a part of mate-screensaver-euclidus
#  
# Author: Assen Totin <assen.totin@gmail.com>
#
# This software is released under GNU General Public License.
# See the COPYING file for details or visit http://www.gnu.org/copyleft/gpl.html 
# for details.

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = als-logo.png als-logo-inverse.png
EXTRA_DIST = $(pixmap_DATA)


